Delete Move and Rename for node working

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <script src="js/jquery-3.4.1.js"></script>
     <!-- Load the Paper.js library -->
     <script type="text/javascript" src="js/paper-full.js"></script>
@@ -15,7 +16,7 @@
   <body>
     <div id = "tit">
       <ul class="lista">
-        <li id="item"><a href="#" id="add">Añadir</a></li>
+        <li id="item"><a href="#" id="add" class="selected">Añadir</a></li>
         <li id="item"><a href="#" id="delete">Eliminar</a></li>
         <li id="item"><a href="#" id="move">Mover</a></li>
         <li id="item"><a href="#" id="rename">Rename</a></li>
