It doesn't move, but everything works

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <a href="#" id="add" class="selected">Añadir</a>
                 </li>
                 <li id="item"><a href="#" id="delete">Eliminar</a></li>
-                <li id="item"><a href="#" id="move">Mover</a></li>
+                <!-- <li id="item"><a href="#" id="move">Mover</a></li>  -->
+                
                 <li id="item"><a href="#" id="rename">Rename</a></li>
                 <li id="item"><a href="#ex1" id="matrix" rel="modal:open">Matriz</a></li>
             </ul>
