Johnson Algorithm Working

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!-- Load the Paper.js library -->
         <script type="text/javascript" src="js/paper-full.js"></script>
         <!-- Load external PaperScript and associate it with myCanvas -->
+        <script src="js/johnson.js"></script>
         <script
             type="text/paperscript"
             src="js/newScript.js"
@@ -40,6 +41,7 @@
                 
                 <li id="item"><a href="#" id="rename">Rename</a></li>
                 <li id="item"><a href="#ex1" id="matrix" rel="modal:open">Matriz</a></li>
+                <li id="item"><a href="#" id="johnson">Johnson</a></li>
             </ul>
         </div>
         <canvas id="myCanvas" resize></canvas>
