--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        
         <!-- Load the Paper.js library -->
         <script type="text/javascript" src="js/paper-full.js"></script>
+        <script src="js/binaryTree.js"></script>
         <!-- Load external PaperScript and associate it with myCanvas -->
         <script src="js/johnson.js"></script>
         <script
@@ -42,6 +43,7 @@
                 <li id="item"><a href="#" id="rename">Rename</a></li>
                 <li id="item"><a href="#ex1" id="matrix" rel="modal:open">Matriz</a></li>
                 <li id="item"><a href="#" id="johnson">Johnson</a></li>
+                <li id="item"><a href="arboles.html" id="preorden">Arboles</a></li>
             </ul>
         </div>
         <canvas id="myCanvas" resize></canvas>
